// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateLockFiles() defaults to latest 1`] = `
Array [
  Object {
    "cmd": "npm install --package-lock-only --no-audit",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "npx lerna@latest bootstrap --no-ci -- --package-lock-only --no-audit",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`generateLockFiles() generates package-lock.json files 1`] = `
Array [
  Object {
    "cmd": "npm install --package-lock-only --no-audit",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "npx lerna@2.0.0 bootstrap --no-ci -- --package-lock-only --no-audit",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`generateLockFiles() generates yarn.lock files 1`] = `
Array [
  Object {
    "cmd": "yarn install --ignore-scripts --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "npx lerna@2.0.0 bootstrap --no-ci -- --ignore-scripts --ignore-engines --ignore-platform",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`generateLockFiles() performs full npm install 1`] = `
Array [
  Object {
    "cmd": "npm install --ignore-scripts  --no-audit",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
  Object {
    "cmd": "npx lerna@2.0.0 bootstrap --no-ci -- --ignore-scripts  --no-audit",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;
